[DEX-1457] Add apm for interac - https://primerapi.atlassian.net/browse/DEX-1457

--- a/primer-sdk-android/src/main/res/values-tr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-tr/strings.xml
@@ -1,106 +1,107 @@
 <resources>
-  <string name="pay">Öde</string>
-  <string name="pay_specific_amount">%s öde</string>
-  <string name="pay_amount">%1$s</string>
-  <string name="add_new_payment_method">Bir ödeme yöntemi ekleyin</string>
-  <string name="pay_by_card">Kart ile öde</string>
-  <string name="pay_by_mobile">Mobil ile öde</string>
-  <string name="add_bank_account">Banka hesabı ekle</string>
-  <string name="other_ways_to_pay">Diğer ödeme yolları</string>
-  <string name="edit_saved_payment_methods">Kaydedilen kartları düzenle</string>
-  <string name="edit">Düzenle</string>
-  <string name="done">Tamam</string>
-  <string name="delete">Sil</string>
-  <string name="add_card">Kart ekle</string>
-  <string name="card_network_fallback">Kart</string>
-  <string name="success_text">Başarılı!</string>
-  <string name="bank_account">Banka Hesabı</string>
-  <string name="enter_card_details">Kart bilgilerini girin</string>
-  <string name="last_four">•••• %d</string>
-  <string name="expiry_date">%1$s / %2$s</string>
-  <string name="available_payment_methods">Mevcut ödeme yöntemleri</string>
-  <string name="card_holder_name">Kart sahibinin adı</string>
-  <string name="card_number">Kart numarası</string>
-  <string name="card_expiry">Son kullanma tarihi</string>
-  <string name="card_cvv">CVV</string>
-  <string name="card_zip">Posta kodu</string>
-  <string name="form_error_required">%1$s gereklidir</string>
-  <string name="form_error_invalid">%1$s geçersiz</string>
-  <string name="payment_method_error">Başka bir ödeme yöntemi seçin</string>
-  <string name="sepa_core_description">SEPA Temel Otomatik Ödeme Talimatı</string>
-  <string name="iban">IBAN</string>
-  <string name="confirm_dd_mandate">Talimatı onayla</string>
-  <string name="name">Ad</string>
-  <string name="email">E-posta</string>
-  <string name="address_line_1">Adres satırı 1</string>
-  <string name="address_line_2">Adres satırı 2 (opsiyonel)</string>
-  <string name="address_city">Şehir</string>
-  <string name="address_state">Eyalet</string>
-  <string name="address_country_code">Ülke</string>
-  <string name="address_postal_code">Posta Kodu</string>
-  <string name="dd_mandate_error">Tüm bilgilerinizin doğru olduğundan emin olun</string>
-  <string name="dd_cancel_message">Banka hesabı eklemeyi iptal etmek mi istiyorsunuz?</string>
-  <string name="data_will_be_lost">Verileriniz silinecektir</string>
-  <string name="enter_name">Adınızı girin</string>
-  <string name="enter_email">E-postanızı girin</string>
-  <string name="enter_address">Adresinizi girin</string>
-  <string name="first_last_name">İsim ve soyad</string>
-  <string name="bank_selection_title">Bankanızı seçin</string>
-  <string name="bank_selection_hint">Banka ara</string>
-  <string name="bank_selection_error_message">Banka yüklenemedi. Bağlantınızı kontrol edip tekrar deneyin.</string>
-  <string name="bank_selection_try_again">Tekrar deneyin</string>
-  <string name="cancel">İptal</string>
-  <string name="next">Sonraki</string>
-  <string name="confirm">Teyit edin</string>
-  <string name="go_back_description">geri dön</string>
-  <string name="success_icon_description">başarılı</string>
-  <string name="dd_mandate_legal">\n        Bu talimat formunu imzalayarak (A) %1$s kişisine bankanıza hesabınızdan ödeme alma talimatı gönderme ve (B) bankanıza da\n        %1$s kişisinden gelen talimatlar uyarınca hesabınızdan ödemeyi gerçekleştirme izni verirsiniz.\n    </string>
-  <string name="klarna">Klarna</string>
-  <string name="giropay">Giropay</string>
-  <string name="twint">Twint</string>
-  <string name="sofort">Sofort</string>
-  <string name="trustly">Trustly</string>
-  <string name="alipay">Alipay</string>
-  <string name="dotpay">Dotpay</string>
-  <string name="vipps">Vipps</string>
-  <string name="mobilepay">Mobilepay</string>
-  <string name="blik">Blik</string>
-  <string name="mbway">Mb Way</string>
-  <string name="sepa">SEPA</string>
-  <string name="bancontact">Bancontact</string>
-  <string name="payconiq">Payconiq</string>
-  <string name="eps">Eps</string>
-  <string name="atome">Atome</string>
-  <string name="xfers">Paynow</string>
-  <string name="choose_payment_method">Ödeme yöntemini seç</string>
-  <string name="saved_payment_methods">KAYITLI ÖDEME YÖNTEMİ</string>
-  <string name="other_ways_of_paying">Diğer ödeme yöntemleri</string>
-  <string name="manage">Yönet</string>
-  <string name="mastercard">Mastercard</string>
-  <string name="john_doe">John Doe</string>
-  <string name="last_four_with_dots">•••• 1234</string>
-  <string name="expires_12_21">Son kullanma tarihi 12 / 21</string>
-  <string name="payment_method_icon">ödeme yöntemi simgesi</string>
-  <string name="test_mail_com">test@mail.com</string>
-  <string name="icon_showing_state">durumu gösteren simge</string>
-  <string name="check_icon">çek simgesi</string>
-  <string name="payment_method_deletion_message">Bu ödeme yöntemini silmek istediğinizden emin misiniz?</string>
-  <string name="credit_debit_card">Kredi/banka kartı</string>
-  <string name="payment_method_added_message">\n        Ödeme yönteminiz\n\n         başarıyla eklendi!\n    </string>
-  <string name="payment_request_completed_successfully">Ödemeniz başarıyla tamamlandı!</string>
-  <string name="payment_method_not_added_message">\n        Ödeme yönteminiz eklenemedi.\n    </string>
-  <string name="error_default">Hata!</string>
-  <string name="payment_request_unsuccessful">Ödemeniz başarısız oldu.</string>
-  <string name="input_description_otp">Bankacılık uygulamanızdan kodu alın.</string>
-  <string name="input_hint_form_blik_otp">6 haneli kod</string>
-  <string name="input_title_phone_number">Telefon numaranızı giriniz</string>
-  <string name="input_hint_form_phone_number">Telefon numarası</string>
-  <string name="payment_method_blik_loading_placeholder">Ödemenizi Blik uygulamasında tamamlayın</string>
-  <string name="payment_method_mb_way_loading_placeholder">Ödemenizi MB Way uygulamasında tamamlayın</string>
-  <string name="input_title_bank_details">Banka bilgilerini giriniz</string>
-  <string name="payment_method_xfers_title">Ödemek için tarayın ya da kaydedin</string>
-  <string name="payment_method_xfers_description">Ekran görüntüsünü bankacılık uygulamanızda yükleyin</string>
-  <string name="no_additional_fee">Ek ücret yok</string>
-  <string name="additional_fees_may_apply">Ek ücret uygulanabilir</string>
+    <string name="pay">Öde</string>
+    <string name="pay_specific_amount">%s öde</string>
+    <string name="pay_amount">%1$s</string>
+    <string name="add_new_payment_method">Bir ödeme yöntemi ekleyin</string>
+    <string name="pay_by_card">Kart ile öde</string>
+    <string name="pay_by_mobile">Mobil ile öde</string>
+    <string name="add_bank_account">Banka hesabı ekle</string>
+    <string name="other_ways_to_pay">Diğer ödeme yolları</string>
+    <string name="edit_saved_payment_methods">Kaydedilen kartları düzenle</string>
+    <string name="edit">Düzenle</string>
+    <string name="done">Tamam</string>
+    <string name="delete">Sil</string>
+    <string name="add_card">Kart ekle</string>
+    <string name="card_network_fallback">Kart</string>
+    <string name="success_text">Başarılı!</string>
+    <string name="bank_account">Banka Hesabı</string>
+    <string name="enter_card_details">Kart bilgilerini girin</string>
+    <string name="last_four">•••• %d</string>
+    <string name="expiry_date">%1$s / %2$s</string>
+    <string name="available_payment_methods">Mevcut ödeme yöntemleri</string>
+    <string name="card_holder_name">Kart sahibinin adı</string>
+    <string name="card_number">Kart numarası</string>
+    <string name="card_expiry">Son kullanma tarihi</string>
+    <string name="card_cvv">CVV</string>
+    <string name="card_zip">Posta kodu</string>
+    <string name="form_error_required">%1$s gereklidir</string>
+    <string name="form_error_invalid">%1$s geçersiz</string>
+    <string name="payment_method_error">Başka bir ödeme yöntemi seçin</string>
+    <string name="sepa_core_description">SEPA Temel Otomatik Ödeme Talimatı</string>
+    <string name="iban">IBAN</string>
+    <string name="confirm_dd_mandate">Talimatı onayla</string>
+    <string name="name">Ad</string>
+    <string name="email">E-posta</string>
+    <string name="address_line_1">Adres satırı 1</string>
+    <string name="address_line_2">Adres satırı 2 (opsiyonel)</string>
+    <string name="address_city">Şehir</string>
+    <string name="address_state">Eyalet</string>
+    <string name="address_country_code">Ülke</string>
+    <string name="address_postal_code">Posta Kodu</string>
+    <string name="dd_mandate_error">Tüm bilgilerinizin doğru olduğundan emin olun</string>
+    <string name="dd_cancel_message">Banka hesabı eklemeyi iptal etmek mi istiyorsunuz?</string>
+    <string name="data_will_be_lost">Verileriniz silinecektir</string>
+    <string name="enter_name">Adınızı girin</string>
+    <string name="enter_email">E-postanızı girin</string>
+    <string name="enter_address">Adresinizi girin</string>
+    <string name="first_last_name">İsim ve soyad</string>
+    <string name="bank_selection_title">Bankanızı seçin</string>
+    <string name="bank_selection_hint">Banka ara</string>
+    <string name="bank_selection_error_message">Banka yüklenemedi. Bağlantınızı kontrol edip tekrar deneyin.</string>
+    <string name="bank_selection_try_again">Tekrar deneyin</string>
+    <string name="cancel">İptal</string>
+    <string name="next">Sonraki</string>
+    <string name="confirm">Teyit edin</string>
+    <string name="go_back_description">geri dön</string>
+    <string name="success_icon_description">başarılı</string>
+    <string name="dd_mandate_legal">\n        Bu talimat formunu imzalayarak (A) %1$s kişisine bankanıza hesabınızdan ödeme alma talimatı gönderme ve (B) bankanıza da\n        %1$s kişisinden gelen talimatlar uyarınca hesabınızdan ödemeyi gerçekleştirme izni verirsiniz.\n    </string>
+    <string name="klarna">Klarna</string>
+    <string name="giropay">Giropay</string>
+    <string name="twint">Twint</string>
+    <string name="sofort">Sofort</string>
+    <string name="trustly">Trustly</string>
+    <string name="alipay">Alipay</string>
+    <string name="dotpay">Dotpay</string>
+    <string name="vipps">Vipps</string>
+    <string name="mobilepay">Mobilepay</string>
+    <string name="blik">Blik</string>
+    <string name="mbway">Mb Way</string>
+    <string name="sepa">SEPA</string>
+    <string name="bancontact">Bancontact</string>
+    <string name="payconiq">Payconiq</string>
+    <string name="eps">Eps</string>
+    <string name="atome">Atome</string>
+    <string name="xfers">Paynow</string>
+    <string name="interac">Interac</string>
     <string name="paytrail">paytrail</string>
+    <string name="choose_payment_method">Ödeme yöntemini seç</string>
+    <string name="saved_payment_methods">KAYITLI ÖDEME YÖNTEMİ</string>
+    <string name="other_ways_of_paying">Diğer ödeme yöntemleri</string>
+    <string name="manage">Yönet</string>
+    <string name="mastercard">Mastercard</string>
+    <string name="john_doe">John Doe</string>
+    <string name="last_four_with_dots">•••• 1234</string>
+    <string name="expires_12_21">Son kullanma tarihi 12 / 21</string>
+    <string name="payment_method_icon">ödeme yöntemi simgesi</string>
+    <string name="test_mail_com">test@mail.com</string>
+    <string name="icon_showing_state">durumu gösteren simge</string>
+    <string name="check_icon">çek simgesi</string>
+    <string name="payment_method_deletion_message">Bu ödeme yöntemini silmek istediğinizden emin misiniz?</string>
+    <string name="credit_debit_card">Kredi/banka kartı</string>
+    <string name="payment_method_added_message">\n        Ödeme yönteminiz\n\n         başarıyla eklendi!\n    </string>
+    <string name="payment_request_completed_successfully">Ödemeniz başarıyla tamamlandı!</string>
+    <string name="payment_method_not_added_message">\n        Ödeme yönteminiz eklenemedi.\n    </string>
+    <string name="error_default">Hata!</string>
+    <string name="payment_request_unsuccessful">Ödemeniz başarısız oldu.</string>
+    <string name="input_description_otp">Bankacılık uygulamanızdan kodu alın.</string>
+    <string name="input_hint_form_blik_otp">6 haneli kod</string>
+    <string name="input_title_phone_number">Telefon numaranızı giriniz</string>
+    <string name="input_hint_form_phone_number">Telefon numarası</string>
+    <string name="payment_method_blik_loading_placeholder">Ödemenizi Blik uygulamasında tamamlayın</string>
+    <string name="payment_method_mb_way_loading_placeholder">Ödemenizi MB Way uygulamasında tamamlayın</string>
+    <string name="input_title_bank_details">Banka bilgilerini giriniz</string>
+    <string name="payment_method_xfers_title">Ödemek için tarayın ya da kaydedin</string>
+    <string name="payment_method_xfers_description">Ekran görüntüsünü bankacılık uygulamanızda yükleyin</string>
+    <string name="no_additional_fee">Ek ücret yok</string>
+    <string name="additional_fees_may_apply">Ek ücret uygulanabilir</string>
 </resources>
