--- a/primer-sdk-android/src/main/res/values-nl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nl/strings.xml
@@ -1,106 +1,107 @@
 <resources>
-  <string name="pay">Betaal</string>
-  <string name="pay_specific_amount">Betaal %s</string>
-  <string name="pay_amount">%1$s</string>
-  <string name="add_new_payment_method">Voeg een Betalingsmethode toe</string>
-  <string name="pay_by_card">Betaal met pas</string>
-  <string name="pay_by_mobile">Betaal met mobiel</string>
-  <string name="add_bank_account">Voeg een bankrekening toe</string>
-  <string name="other_ways_to_pay">Andere manieren om te betalen</string>
-  <string name="edit_saved_payment_methods">Opgeslagen passen bewerken</string>
-  <string name="edit">Bewerken</string>
-  <string name="done">Gereed</string>
-  <string name="delete">Verwijderen</string>
-  <string name="add_card">Voeg een pas toe</string>
-  <string name="card_network_fallback">Pas</string>
-  <string name="success_text">Gelukt!</string>
-  <string name="bank_account">Bankrekening</string>
-  <string name="enter_card_details">Voer gegevens pas in</string>
-  <string name="last_four">•••• %d</string>
-  <string name="expiry_date">%1$s / %2$s</string>
-  <string name="available_payment_methods">Beschikbare betaalmethoden</string>
-  <string name="card_holder_name">Naam pashouder</string>
-  <string name="card_number">Pasnummer</string>
-  <string name="card_expiry">Vervaldatum</string>
-  <string name="card_cvv">CVV</string>
-  <string name="card_zip">Postcode</string>
-  <string name="form_error_required">%1$s is vereist</string>
-  <string name="form_error_invalid">%1$s is ongeldig</string>
-  <string name="payment_method_error">Kies een andere betaalmethode</string>
-  <string name="sepa_core_description">SEPA Core Incassomachtiging.</string>
-  <string name="iban">IBAN</string>
-  <string name="confirm_dd_mandate">Machtiging bevestigen</string>
-  <string name="name">Naam</string>
-  <string name="email">E-mail</string>
-  <string name="address_line_1">Adres regel 1</string>
-  <string name="address_line_2">Adres regel 2 (optioneel)</string>
-  <string name="address_city">Stad</string>
-  <string name="address_state">Staat</string>
-  <string name="address_country_code">Land</string>
-  <string name="address_postal_code">Postcode</string>
-  <string name="dd_mandate_error">Controleer of al uw informatie correct is</string>
-  <string name="dd_cancel_message">Wilt u het toevoegen van een bankrekening annuleren?</string>
-  <string name="data_will_be_lost">Uw gegevens worden gewist</string>
-  <string name="enter_name">Vul uw naam in</string>
-  <string name="enter_email">Vul uw e-mailadres in</string>
-  <string name="enter_address">Vul uw adres in</string>
-  <string name="first_last_name">Voornaam en achternaam</string>
-  <string name="bank_selection_title">Uw bank kiezen</string>
-  <string name="bank_selection_hint">Banken zoeken</string>
-  <string name="bank_selection_error_message">Bank kan niet worden geladen. Controleer uw verbinding en probeer het opnieuw.</string>
-  <string name="bank_selection_try_again">Opnieuw proberen</string>
-  <string name="cancel">Annuleren</string>
-  <string name="next">Volgende</string>
-  <string name="confirm">Bevestigen</string>
-  <string name="go_back_description">ga terug</string>
-  <string name="success_icon_description">gelukt</string>
-  <string name="dd_mandate_legal">\n        Door dit machtigingsformulier te ondertekenen, machtigt u (A) %1$s om instructies naar uw bank te sturen om bedragen van uw rekening af te schrijven en (B) uw bank om bedragen\n        van uw rekening af te schrijven in overeenstemming met de instructies van %1$s.\n    </string>
-  <string name="klarna">Klarna</string>
-  <string name="giropay">Giropay</string>
-  <string name="twint">Twint</string>
-  <string name="sofort">Sofort</string>
-  <string name="trustly">Trustly</string>
-  <string name="alipay">Alipay</string>
-  <string name="dotpay">Dotpay</string>
-  <string name="vipps">Vipps</string>
-  <string name="mobilepay">Mobilepay</string>
-  <string name="blik">Blik</string>
-  <string name="mbway">Mb Way</string>
-  <string name="sepa">SEPA</string>
-  <string name="bancontact">Bancontact</string>
-  <string name="payconiq">Payconiq</string>
-  <string name="eps">Eps</string>
-  <string name="atome">Atome</string>
-  <string name="xfers">Paynow</string>
-  <string name="choose_payment_method">Kies betaalmethode</string>
-  <string name="saved_payment_methods">OPGESLAGEN BETAALMETHODE</string>
-  <string name="other_ways_of_paying">Andere manieren om te betalen</string>
-  <string name="manage">Beheren</string>
-  <string name="mastercard">Mastercard</string>
-  <string name="john_doe">John Doe</string>
-  <string name="last_four_with_dots">•••• 1234</string>
-  <string name="expires_12_21">Vervalt 12/21</string>
-  <string name="payment_method_icon">betaalmethode-icoon</string>
-  <string name="test_mail_com">test@mail.com</string>
-  <string name="icon_showing_state">pictogram dat status aantoont</string>
-  <string name="check_icon">vinkje</string>
-  <string name="payment_method_deletion_message">Weet je zeker dat je deze betaalmethode wilt verwijderen?</string>
-  <string name="credit_debit_card">Credit-/betaalkaart</string>
-  <string name="payment_method_added_message">\n        Je betaalmethode \n\n        is succesvol toegevoegd!\n    </string>
-  <string name="payment_request_completed_successfully">Je betaling was succesvol!</string>
-  <string name="payment_method_not_added_message">\n        Je betaalmethode kon niet worden toegevoegd.\n    </string>
-  <string name="error_default">Fout!</string>
-  <string name="payment_request_unsuccessful">Je betaling was niet succesvol.</string>
-  <string name="input_description_otp">Ontvang de code van uw bank-app</string>
-  <string name="input_hint_form_blik_otp">6-cijferige code</string>
-  <string name="input_title_phone_number">Vul uw telefoonnummer in</string>
-  <string name="input_hint_form_phone_number">Telefoonnummer</string>
-  <string name="payment_method_blik_loading_placeholder">Voltooi uw betaling in de Blik-app</string>
-  <string name="payment_method_mb_way_loading_placeholder">Voltooi uw betaling in de Mb Way-app</string>
-  <string name="input_title_bank_details">Verstrek uw bankgegevens</string>
-  <string name="payment_method_xfers_title">Scan of sla op om te betalen</string>
-  <string name="payment_method_xfers_description">Upload de schermafbeelding in uw bank-app</string>
-  <string name="no_additional_fee">Geen extra kosten</string>
-  <string name="additional_fees_may_apply">Er kunnen extra kosten van toepassing zijn</string>
+    <string name="pay">Betaal</string>
+    <string name="pay_specific_amount">Betaal %s</string>
+    <string name="pay_amount">%1$s</string>
+    <string name="add_new_payment_method">Voeg een Betalingsmethode toe</string>
+    <string name="pay_by_card">Betaal met pas</string>
+    <string name="pay_by_mobile">Betaal met mobiel</string>
+    <string name="add_bank_account">Voeg een bankrekening toe</string>
+    <string name="other_ways_to_pay">Andere manieren om te betalen</string>
+    <string name="edit_saved_payment_methods">Opgeslagen passen bewerken</string>
+    <string name="edit">Bewerken</string>
+    <string name="done">Gereed</string>
+    <string name="delete">Verwijderen</string>
+    <string name="add_card">Voeg een pas toe</string>
+    <string name="card_network_fallback">Pas</string>
+    <string name="success_text">Gelukt!</string>
+    <string name="bank_account">Bankrekening</string>
+    <string name="enter_card_details">Voer gegevens pas in</string>
+    <string name="last_four">•••• %d</string>
+    <string name="expiry_date">%1$s / %2$s</string>
+    <string name="available_payment_methods">Beschikbare betaalmethoden</string>
+    <string name="card_holder_name">Naam pashouder</string>
+    <string name="card_number">Pasnummer</string>
+    <string name="card_expiry">Vervaldatum</string>
+    <string name="card_cvv">CVV</string>
+    <string name="card_zip">Postcode</string>
+    <string name="form_error_required">%1$s is vereist</string>
+    <string name="form_error_invalid">%1$s is ongeldig</string>
+    <string name="payment_method_error">Kies een andere betaalmethode</string>
+    <string name="sepa_core_description">SEPA Core Incassomachtiging.</string>
+    <string name="iban">IBAN</string>
+    <string name="confirm_dd_mandate">Machtiging bevestigen</string>
+    <string name="name">Naam</string>
+    <string name="email">E-mail</string>
+    <string name="address_line_1">Adres regel 1</string>
+    <string name="address_line_2">Adres regel 2 (optioneel)</string>
+    <string name="address_city">Stad</string>
+    <string name="address_state">Staat</string>
+    <string name="address_country_code">Land</string>
+    <string name="address_postal_code">Postcode</string>
+    <string name="dd_mandate_error">Controleer of al uw informatie correct is</string>
+    <string name="dd_cancel_message">Wilt u het toevoegen van een bankrekening annuleren?</string>
+    <string name="data_will_be_lost">Uw gegevens worden gewist</string>
+    <string name="enter_name">Vul uw naam in</string>
+    <string name="enter_email">Vul uw e-mailadres in</string>
+    <string name="enter_address">Vul uw adres in</string>
+    <string name="first_last_name">Voornaam en achternaam</string>
+    <string name="bank_selection_title">Uw bank kiezen</string>
+    <string name="bank_selection_hint">Banken zoeken</string>
+    <string name="bank_selection_error_message">Bank kan niet worden geladen. Controleer uw verbinding en probeer het opnieuw.</string>
+    <string name="bank_selection_try_again">Opnieuw proberen</string>
+    <string name="cancel">Annuleren</string>
+    <string name="next">Volgende</string>
+    <string name="confirm">Bevestigen</string>
+    <string name="go_back_description">ga terug</string>
+    <string name="success_icon_description">gelukt</string>
+    <string name="dd_mandate_legal">\n        Door dit machtigingsformulier te ondertekenen, machtigt u (A) %1$s om instructies naar uw bank te sturen om bedragen van uw rekening af te schrijven en (B) uw bank om bedragen\n        van uw rekening af te schrijven in overeenstemming met de instructies van %1$s.\n    </string>
+    <string name="klarna">Klarna</string>
+    <string name="giropay">Giropay</string>
+    <string name="twint">Twint</string>
+    <string name="sofort">Sofort</string>
+    <string name="trustly">Trustly</string>
+    <string name="alipay">Alipay</string>
+    <string name="dotpay">Dotpay</string>
+    <string name="vipps">Vipps</string>
+    <string name="mobilepay">Mobilepay</string>
+    <string name="blik">Blik</string>
+    <string name="mbway">Mb Way</string>
+    <string name="sepa">SEPA</string>
+    <string name="bancontact">Bancontact</string>
+    <string name="payconiq">Payconiq</string>
+    <string name="eps">Eps</string>
+    <string name="atome">Atome</string>
+    <string name="xfers">Paynow</string>
+    <string name="interac">Interac</string>
+    <string name="choose_payment_method">Kies betaalmethode</string>
+    <string name="saved_payment_methods">OPGESLAGEN BETAALMETHODE</string>
+    <string name="other_ways_of_paying">Andere manieren om te betalen</string>
+    <string name="manage">Beheren</string>
+    <string name="mastercard">Mastercard</string>
+    <string name="john_doe">John Doe</string>
+    <string name="last_four_with_dots">•••• 1234</string>
+    <string name="expires_12_21">Vervalt 12/21</string>
+    <string name="payment_method_icon">betaalmethode-icoon</string>
+    <string name="test_mail_com">test@mail.com</string>
+    <string name="icon_showing_state">pictogram dat status aantoont</string>
+    <string name="check_icon">vinkje</string>
+    <string name="payment_method_deletion_message">Weet je zeker dat je deze betaalmethode wilt verwijderen?</string>
+    <string name="credit_debit_card">Credit-/betaalkaart</string>
+    <string name="payment_method_added_message">\n        Je betaalmethode \n\n        is succesvol toegevoegd!\n    </string>
+    <string name="payment_request_completed_successfully">Je betaling was succesvol!</string>
+    <string name="payment_method_not_added_message">\n        Je betaalmethode kon niet worden toegevoegd.\n    </string>
+    <string name="error_default">Fout!</string>
+    <string name="payment_request_unsuccessful">Je betaling was niet succesvol.</string>
+    <string name="input_description_otp">Ontvang de code van uw bank-app</string>
+    <string name="input_hint_form_blik_otp">6-cijferige code</string>
+    <string name="input_title_phone_number">Vul uw telefoonnummer in</string>
+    <string name="input_hint_form_phone_number">Telefoonnummer</string>
+    <string name="payment_method_blik_loading_placeholder">Voltooi uw betaling in de Blik-app</string>
+    <string name="payment_method_mb_way_loading_placeholder">Voltooi uw betaling in de Mb Way-app</string>
+    <string name="input_title_bank_details">Verstrek uw bankgegevens</string>
+    <string name="payment_method_xfers_title">Scan of sla op om te betalen</string>
+    <string name="payment_method_xfers_description">Upload de schermafbeelding in uw bank-app</string>
+    <string name="no_additional_fee">Geen extra kosten</string>
+    <string name="additional_fees_may_apply">Er kunnen extra kosten van toepassing zijn</string>
     <string name="paytrail">paytrail</string>
 </resources>
