--- a/primer-sdk-android/src/main/res/values-pt/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pt/strings.xml
@@ -1,106 +1,107 @@
 <resources>
-  <string name="pay">Pagar</string>
-  <string name="pay_specific_amount">Pagar %s</string>
-  <string name="pay_amount">%1$s</string>
-  <string name="add_new_payment_method">Adicionar um método de pagamento</string>
-  <string name="pay_by_card">Pagar com cartão</string>
-  <string name="pay_by_mobile">Pagar por telemóvel</string>
-  <string name="add_bank_account">Adicionar conta bancária</string>
-  <string name="other_ways_to_pay">Outras formas de pagar</string>
-  <string name="edit_saved_payment_methods">Editar cartões guardados</string>
-  <string name="edit">Editar</string>
-  <string name="done">Concluído</string>
-  <string name="delete">Excluir</string>
-  <string name="add_card">Adicionar cartão</string>
-  <string name="card_network_fallback">Cartão</string>
-  <string name="success_text">Sucesso!</string>
-  <string name="bank_account">Conta bancária</string>
-  <string name="enter_card_details">Inserir detalhes de cartão</string>
-  <string name="last_four">•••• %d</string>
-  <string name="expiry_date">%1$s / %2$s</string>
-  <string name="available_payment_methods">Métodos de pagamento disponíveis</string>
-  <string name="card_holder_name">Nome do titular do cartão</string>
-  <string name="card_number">Número do cartão</string>
-  <string name="card_expiry">Data de validade</string>
-  <string name="card_cvv">CVV</string>
-  <string name="card_zip">Código postal</string>
-  <string name="form_error_required">%1$s é obrigatório</string>
-  <string name="form_error_invalid">%1$s é inválido</string>
-  <string name="payment_method_error">Escolha outro método de pagamento</string>
-  <string name="sepa_core_description">Mandato de Débito Direto SEPA Core.</string>
-  <string name="iban">IBAN</string>
-  <string name="confirm_dd_mandate">Confirmar mandato</string>
-  <string name="name">Nome</string>
-  <string name="email">E-mail</string>
-  <string name="address_line_1">Linha de morada 1</string>
-  <string name="address_line_2">Linha de morada 2 (opcional)</string>
-  <string name="address_city">Cidade</string>
-  <string name="address_state">Distrito</string>
-  <string name="address_country_code">País</string>
-  <string name="address_postal_code">Código Postal</string>
-  <string name="dd_mandate_error">Verifique se toda a sua informação está correta</string>
-  <string name="dd_cancel_message">Deseja cancelar a adição de uma conta bancária?</string>
-  <string name="data_will_be_lost">Os seus dados serão excluídos</string>
-  <string name="enter_name">Insira o seu nome</string>
-  <string name="enter_email">Insira o seu e-mail</string>
-  <string name="enter_address">Insira a sua morada</string>
-  <string name="first_last_name">Primeiro e último nome</string>
-  <string name="bank_selection_title">Escolha o seu banco</string>
-  <string name="bank_selection_hint">Procurar bancos</string>
-  <string name="bank_selection_error_message">Não foi possível carregar o banco. Verifique a sua ligação e tente novamente.</string>
-  <string name="bank_selection_try_again">Tente novamente</string>
-  <string name="cancel">Cancelar</string>
-  <string name="next">Próximo</string>
-  <string name="confirm">Confirmar</string>
-  <string name="go_back_description">voltar</string>
-  <string name="success_icon_description">sucesso</string>
-  <string name="dd_mandate_legal">\n        Ao assinar este formulário de mandato, autoriza (A) %1$s a enviar instruções ao seu banco para debitar a sua conta e (B) o seu banco a\n        debitar a sua conta de acordo com as instruções de %1$s.\n    </string>
-  <string name="klarna">Klarna</string>
-  <string name="giropay">Giropay</string>
-  <string name="twint">Twint</string>
-  <string name="sofort">Sofort</string>
-  <string name="trustly">Trustly</string>
-  <string name="alipay">Alipay</string>
-  <string name="dotpay">Dotpay</string>
-  <string name="vipps">Vipps</string>
-  <string name="mobilepay">Mobilepay</string>
-  <string name="blik">Blik</string>
-  <string name="mbway">Mb Way</string>
-  <string name="sepa">SEPA</string>
-  <string name="bancontact">Bancontact</string>
-  <string name="payconiq">Payconiq</string>
-  <string name="eps">Eps</string>
-  <string name="atome">Atome</string>
-  <string name="xfers">Paynow</string>
-  <string name="choose_payment_method">Escolha o método de pagamento</string>
-  <string name="saved_payment_methods">MÉTODO DE PAGAMENTO GUARDADO</string>
-  <string name="other_ways_of_paying">Outras formas de pagar</string>
-  <string name="manage">Gerir</string>
-  <string name="mastercard">Mastercard</string>
-  <string name="john_doe">João Silva</string>
-  <string name="last_four_with_dots">•••• 1234</string>
-  <string name="expires_12_21">Expira em 12 / 21</string>
-  <string name="payment_method_icon">ícone do método de pagamento</string>
-  <string name="test_mail_com">test@mail.com</string>
-  <string name="icon_showing_state">ícone que exibe o estado</string>
-  <string name="check_icon">verificar ícone</string>
-  <string name="payment_method_deletion_message">Tem a certeza de que pretende eliminar este método de pagamento?</string>
-  <string name="credit_debit_card">Cartão de crédito/débito</string>
-  <string name="payment_method_added_message">\n        O seu método de pagamento \n\n        foi adicionado com sucesso!\n    </string>
-  <string name="payment_request_completed_successfully">O seu pagamento foi concluído com sucesso!</string>
-  <string name="payment_method_not_added_message">\n        Não foi possível adicionar o seu método de pagamento atual.\n    </string>
-  <string name="error_default">Erro!</string>
-  <string name="payment_request_unsuccessful">O seu pagamento falhou.</string>
-  <string name="input_description_otp">Obtenha o código a partir da sua aplicação bancária.</string>
-  <string name="input_hint_form_blik_otp">código de 6 dígitos</string>
-  <string name="input_title_phone_number">Introduza o seu número de telefone</string>
-  <string name="input_hint_form_phone_number">Número de telefone</string>
-  <string name="payment_method_blik_loading_placeholder">Complete o seu pagamento na aplicação Blik</string>
-  <string name="payment_method_mb_way_loading_placeholder">Complete o seu pagamento na aplicação MB WAY</string>
-  <string name="input_title_bank_details">Forneça os dados bancários</string>
-  <string name="payment_method_xfers_title">Faça scan ou guarde para pagar</string>
-  <string name="payment_method_xfers_description">Carregue a captura de ecrã na sua aplicação bancária.</string>
-  <string name="no_additional_fee">Sem taxas adicionais</string>
-  <string name="additional_fees_may_apply">Podem ser aplicadas taxas adicionais</string>
+    <string name="pay">Pagar</string>
+    <string name="pay_specific_amount">Pagar %s</string>
+    <string name="pay_amount">%1$s</string>
+    <string name="add_new_payment_method">Adicionar um método de pagamento</string>
+    <string name="pay_by_card">Pagar com cartão</string>
+    <string name="pay_by_mobile">Pagar por telemóvel</string>
+    <string name="add_bank_account">Adicionar conta bancária</string>
+    <string name="other_ways_to_pay">Outras formas de pagar</string>
+    <string name="edit_saved_payment_methods">Editar cartões guardados</string>
+    <string name="edit">Editar</string>
+    <string name="done">Concluído</string>
+    <string name="delete">Excluir</string>
+    <string name="add_card">Adicionar cartão</string>
+    <string name="card_network_fallback">Cartão</string>
+    <string name="success_text">Sucesso!</string>
+    <string name="bank_account">Conta bancária</string>
+    <string name="enter_card_details">Inserir detalhes de cartão</string>
+    <string name="last_four">•••• %d</string>
+    <string name="expiry_date">%1$s / %2$s</string>
+    <string name="available_payment_methods">Métodos de pagamento disponíveis</string>
+    <string name="card_holder_name">Nome do titular do cartão</string>
+    <string name="card_number">Número do cartão</string>
+    <string name="card_expiry">Data de validade</string>
+    <string name="card_cvv">CVV</string>
+    <string name="card_zip">Código postal</string>
+    <string name="form_error_required">%1$s é obrigatório</string>
+    <string name="form_error_invalid">%1$s é inválido</string>
+    <string name="payment_method_error">Escolha outro método de pagamento</string>
+    <string name="sepa_core_description">Mandato de Débito Direto SEPA Core.</string>
+    <string name="iban">IBAN</string>
+    <string name="confirm_dd_mandate">Confirmar mandato</string>
+    <string name="name">Nome</string>
+    <string name="email">E-mail</string>
+    <string name="address_line_1">Linha de morada 1</string>
+    <string name="address_line_2">Linha de morada 2 (opcional)</string>
+    <string name="address_city">Cidade</string>
+    <string name="address_state">Distrito</string>
+    <string name="address_country_code">País</string>
+    <string name="address_postal_code">Código Postal</string>
+    <string name="dd_mandate_error">Verifique se toda a sua informação está correta</string>
+    <string name="dd_cancel_message">Deseja cancelar a adição de uma conta bancária?</string>
+    <string name="data_will_be_lost">Os seus dados serão excluídos</string>
+    <string name="enter_name">Insira o seu nome</string>
+    <string name="enter_email">Insira o seu e-mail</string>
+    <string name="enter_address">Insira a sua morada</string>
+    <string name="first_last_name">Primeiro e último nome</string>
+    <string name="bank_selection_title">Escolha o seu banco</string>
+    <string name="bank_selection_hint">Procurar bancos</string>
+    <string name="bank_selection_error_message">Não foi possível carregar o banco. Verifique a sua ligação e tente novamente.</string>
+    <string name="bank_selection_try_again">Tente novamente</string>
+    <string name="cancel">Cancelar</string>
+    <string name="next">Próximo</string>
+    <string name="confirm">Confirmar</string>
+    <string name="go_back_description">voltar</string>
+    <string name="success_icon_description">sucesso</string>
+    <string name="dd_mandate_legal">\n        Ao assinar este formulário de mandato, autoriza (A) %1$s a enviar instruções ao seu banco para debitar a sua conta e (B) o seu banco a\n        debitar a sua conta de acordo com as instruções de %1$s.\n    </string>
+    <string name="klarna">Klarna</string>
+    <string name="giropay">Giropay</string>
+    <string name="twint">Twint</string>
+    <string name="sofort">Sofort</string>
+    <string name="trustly">Trustly</string>
+    <string name="alipay">Alipay</string>
+    <string name="dotpay">Dotpay</string>
+    <string name="vipps">Vipps</string>
+    <string name="mobilepay">Mobilepay</string>
+    <string name="blik">Blik</string>
+    <string name="mbway">Mb Way</string>
+    <string name="sepa">SEPA</string>
+    <string name="bancontact">Bancontact</string>
+    <string name="payconiq">Payconiq</string>
+    <string name="eps">Eps</string>
+    <string name="atome">Atome</string>
+    <string name="xfers">Paynow</string>
+    <string name="interac">Interac</string>
+    <string name="choose_payment_method">Escolha o método de pagamento</string>
+    <string name="saved_payment_methods">MÉTODO DE PAGAMENTO GUARDADO</string>
+    <string name="other_ways_of_paying">Outras formas de pagar</string>
+    <string name="manage">Gerir</string>
+    <string name="mastercard">Mastercard</string>
+    <string name="john_doe">João Silva</string>
+    <string name="last_four_with_dots">•••• 1234</string>
+    <string name="expires_12_21">Expira em 12 / 21</string>
+    <string name="payment_method_icon">ícone do método de pagamento</string>
+    <string name="test_mail_com">test@mail.com</string>
+    <string name="icon_showing_state">ícone que exibe o estado</string>
+    <string name="check_icon">verificar ícone</string>
+    <string name="payment_method_deletion_message">Tem a certeza de que pretende eliminar este método de pagamento?</string>
+    <string name="credit_debit_card">Cartão de crédito/débito</string>
+    <string name="payment_method_added_message">\n        O seu método de pagamento \n\n        foi adicionado com sucesso!\n    </string>
+    <string name="payment_request_completed_successfully">O seu pagamento foi concluído com sucesso!</string>
+    <string name="payment_method_not_added_message">\n        Não foi possível adicionar o seu método de pagamento atual.\n    </string>
+    <string name="error_default">Erro!</string>
+    <string name="payment_request_unsuccessful">O seu pagamento falhou.</string>
+    <string name="input_description_otp">Obtenha o código a partir da sua aplicação bancária.</string>
+    <string name="input_hint_form_blik_otp">código de 6 dígitos</string>
+    <string name="input_title_phone_number">Introduza o seu número de telefone</string>
+    <string name="input_hint_form_phone_number">Número de telefone</string>
+    <string name="payment_method_blik_loading_placeholder">Complete o seu pagamento na aplicação Blik</string>
+    <string name="payment_method_mb_way_loading_placeholder">Complete o seu pagamento na aplicação MB WAY</string>
+    <string name="input_title_bank_details">Forneça os dados bancários</string>
+    <string name="payment_method_xfers_title">Faça scan ou guarde para pagar</string>
+    <string name="payment_method_xfers_description">Carregue a captura de ecrã na sua aplicação bancária.</string>
+    <string name="no_additional_fee">Sem taxas adicionais</string>
+    <string name="additional_fees_may_apply">Podem ser aplicadas taxas adicionais</string>
     <string name="paytrail">paytrail</string>
 </resources>
