--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -86,6 +86,8 @@
     <string name="eps">Eps</string>
     <string name="atome">Atome</string>
     <string name="xfers">Paynow</string>
+    <string name="interac">Interac</string>
+    <string name="paytrail">paytrail</string>
 
     <string name="choose_payment_method">Choose payment method</string>
     <string name="saved_payment_methods">SAVED PAYMENT METHOD</string>
@@ -127,5 +129,4 @@
     <!--surcharge-->
     <string name="no_additional_fee">No additional fee</string>
     <string name="additional_fees_may_apply">Additional fees may apply</string>
-    <string name="paytrail">paytrail</string>
 </resources>
