--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -52,5 +52,10 @@
     <string name="payment_handling">Payment Handling</string>
     <string name="payment_handling_auto">AUTO</string>
     <string name="payment_handling_manual">MANUAL</string>
+    <string name="env_production">Production</string>
+    <string name="env_staging">Staging</string>
+    <string name="env_dev">Dev</string>
+    <string name="env_sandbox">Sandbox</string>
+    <string name="api_key">Put here API KEY</string>
 
 </resources>
