[DEX-1778] Add new apm for coinbase, pay with crypto, handle dark mode

--- a/primer-sdk-android/src/main/res/values-de/strings.xml
+++ b/primer-sdk-android/src/main/res/values-de/strings.xml
@@ -105,4 +105,5 @@
     <string name="payment_method_xfers_description">Lade den Screenshot in deiner Banking-App hoch.</string>
     <string name="no_additional_fee">Keine zusätzlichen Gebühren</string>
     <string name="additional_fees_may_apply">Es können weitere Gebühren anfallen</string>
+    <string name="pay_with_crypto">Pay with crypto</string>
 </resources>
