--- a/primer-sdk-android/src/main/res/values-es/strings.xml
+++ b/primer-sdk-android/src/main/res/values-es/strings.xml
@@ -105,4 +105,5 @@
     <string name="payment_method_xfers_description">Sube la captura de pantalla a la aplicación de tu banco.</string>
     <string name="no_additional_fee">Sin cargos adicionales</string>
     <string name="additional_fees_may_apply">Podrían aplicarse cargos adicionales</string>
+    <string name="pay_with_crypto">Pay with crypto</string>
 </resources>
