--- a/primer-sdk-android/src/main/res/values-pl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pl/strings.xml
@@ -105,4 +105,5 @@
     <string name="payment_method_xfers_description">Wczytaj zrzut ekranu w aplikacji bankowej.</string>
     <string name="no_additional_fee">Żadnych dodatkowych opłat</string>
     <string name="additional_fees_may_apply">Mogą mieć zastosowanie dodatkowe opłaty</string>
+    <string name="pay_with_crypto">Pay with crypto</string>
 </resources>
