--- a/primer-sdk-android/src/main/res/values-pt/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pt/strings.xml
@@ -105,4 +105,5 @@
     <string name="payment_method_xfers_description">Carregue a captura de ecrã na sua aplicação bancária.</string>
     <string name="no_additional_fee">Sem taxas adicionais</string>
     <string name="additional_fees_may_apply">Podem ser aplicadas taxas adicionais</string>
+    <string name="pay_with_crypto">Pay with crypto</string>
 </resources>
