--- a/primer-sdk-android/src/main/res/values-tr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-tr/strings.xml
@@ -105,5 +105,5 @@
     <string name="payment_method_xfers_description">Ekran görüntüsünü bankacılık uygulamanızda yükleyin</string>
     <string name="no_additional_fee">Ek ücret yok</string>
     <string name="additional_fees_may_apply">Ek ücret uygulanabilir</string>
-
+    <string name="pay_with_crypto">Pay with crypto</string>
 </resources>
