--- a/primer-sdk-android/src/main/res/values-el/strings.xml
+++ b/primer-sdk-android/src/main/res/values-el/strings.xml
@@ -105,4 +105,5 @@
     <string name="payment_method_xfers_description">Ανεβάστε το στιγμιότυπο οθόνης στην τραπεζική σας εφαρμογή.</string>
     <string name="no_additional_fee">Χωρίς πρόσθετη χρέωση</string>
     <string name="additional_fees_may_apply">Ενδέχεται να ισχύουν πρόσθετες χρεώσεις</string>
+    <string name="pay_with_crypto">Pay with crypto</string>
 </resources>
