--- a/primer-sdk-android/src/main/res/values-fr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-fr/strings.xml
@@ -105,4 +105,5 @@
     <string name="payment_method_xfers_description">Téléchargez la capture d\'écran dans votre application bancaire.</string>
     <string name="no_additional_fee">Aucun frais supplémentaire</string>
     <string name="additional_fees_may_apply">Des frais supplémentaires peuvent s\'appliquer</string>
+    <string name="pay_with_crypto">Pay with crypto</string>
 </resources>
