--- a/primer-sdk-android/src/main/res/values-nb/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nb/strings.xml
@@ -105,4 +105,5 @@
     <string name="payment_method_xfers_description">Last opp skjermbildet i bankappen din.</string>
     <string name="no_additional_fee">Ingen ytterligere avgifter</string>
     <string name="additional_fees_may_apply">Ytterligere avgifter kan påløpe</string>
+    <string name="pay_with_crypto">Pay with crypto</string>
 </resources>
