[DEX-1787] Add new apm for 2c2p method

--- a/primer-sdk-android/src/main/res/values-de/strings.xml
+++ b/primer-sdk-android/src/main/res/values-de/strings.xml
@@ -106,4 +106,5 @@
     <string name="no_additional_fee">Keine zusätzlichen Gebühren</string>
     <string name="additional_fees_may_apply">Es können weitere Gebühren anfallen</string>
     <string name="pay_with_crypto">Pay with crypto</string>
+    <string name="twoc_2p_button">Pay in installments</string>
 </resources>
