--- a/primer-sdk-android/src/main/res/values-fr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-fr/strings.xml
@@ -106,4 +106,5 @@
     <string name="no_additional_fee">Aucun frais supplémentaire</string>
     <string name="additional_fees_may_apply">Des frais supplémentaires peuvent s\'appliquer</string>
     <string name="pay_with_crypto">Pay with crypto</string>
+    <string name="twoc_2p_button">Pay in installments</string>
 </resources>
