--- a/primer-sdk-android/src/main/res/values-it/strings.xml
+++ b/primer-sdk-android/src/main/res/values-it/strings.xml
@@ -106,4 +106,5 @@
     <string name="no_additional_fee">Nessun costo aggiuntivo</string>
     <string name="additional_fees_may_apply">Potrebbero essere applicati costi aggiuntivi</string>
     <string name="pay_with_crypto">Pay with crypto</string>
+    <string name="twoc_2p_button">Pay in installments</string>
 </resources>
