--- a/primer-sdk-android/src/main/res/values-nl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nl/strings.xml
@@ -106,4 +106,5 @@
     <string name="no_additional_fee">Geen extra kosten</string>
     <string name="additional_fees_may_apply">Er kunnen extra kosten van toepassing zijn</string>
     <string name="pay_with_crypto">Pay with crypto</string>
+    <string name="twoc_2p_button">Pay in installments</string>
 </resources>
