--- a/primer-sdk-android/src/main/res/values-pl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pl/strings.xml
@@ -106,4 +106,5 @@
     <string name="no_additional_fee">Żadnych dodatkowych opłat</string>
     <string name="additional_fees_may_apply">Mogą mieć zastosowanie dodatkowe opłaty</string>
     <string name="pay_with_crypto">Pay with crypto</string>
+    <string name="twoc_2p_button">Pay in installments</string>
 </resources>
