--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -126,4 +126,5 @@
     <string name="no_additional_fee">No additional fee</string>
     <string name="additional_fees_may_apply">Additional fees may apply</string>
     <string name="pay_with_crypto">Pay with crypto</string>
+    <string name="twoc_2p_button">Pay in installments</string>
 </resources>
