--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -127,4 +127,5 @@
     <string name="additional_fees_may_apply">Additional fees may apply</string>
     <string name="pay_with_crypto">Pay with crypto</string>
     <string name="twoc_2p_button">Pay in installments</string>
+    <string name="pay_with">Pay with</string>
 </resources>
