--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -136,4 +136,6 @@
     <string name="label_failed">Failed</string>
     <string name="country_search_hint">Find country</string>
     <string name="title_card_form_billing_address">Billing address</string>
+    <string name="pay_with_card">Pay with card</string>
+    <string name="card_details">Card details</string>
 </resources>
